# DRLinFluids

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  DRLinFluids_install.sh  LICENSE  README.md  pyproject.toml  singularity_install.sh
.github/workflows/: ci-cd.yml
cases/cylinder2D_multiprocessing/: requirements.txt
cases/square2D_VIV_multiprocessing/DRLinFluids_square2D_VIV/: __init__.py  launch_multiprocessing_traning_square2D_VIV.py
cases/square2D_multiprocessing/DRLinFluids_square/: __init__.py  envobject_square.py  launch_multiprocessing_traning_square.py  single_run.py
cases/square2D_multiprocessing/env01/: fluent.msh
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/: MIKT-SAC
examples/DRLinFluids_DFDRL_cylinder/DRLinFluids_DFDRL_cylinder/: envobject_cylinder.py  (+1 more)
examples/DRLinFluids_bridge_opt/: OptimizeInFluids.py  blackBoxFunction.py  envobject_cylinder.py  launch_multiprocessing_traning_cylinder.py
examples/MIKT-SAC  algorithm/: RemoteEnvironmentClient.py  RemoteEnvironmentServer.py  __init__.py  bash_code.txt  echo_server.py  envobject.py  hostname.txt  launch_MIKT_SAC.py  launch_parallel_training.py  launch_servers.py  requirements.txt  servers_test.py  single_run.py  test_sac_with_il_old.py  train_test.py  utils.py
examples/active_flow_control/: launch_training.ipynb
examples/newbc/: wmakeall
examples/old_hanshu/: collector.py  continuous.py  ddpg.py  launch_multiprocessing_traning_square.py  sac.py
src/drlinfluids/: __init__.py  extractor.py  logger.py  runner.py  utils.py  wrapper.py
tests/: test_runner.py
(+186 files in other folders)
