[tool.poetry]
name = "drlinfluids"
version = "0.1.0"
description = "A flexible platform to utilize Deep Reinforcement Learning in the field of Computational Fluid Dynamics."
authors = ["Qiulei Wang et al."]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.18.5"
pandas = ">=1.3.3"
scipy = ">=1.4.1"
PeakUtils = ">=1.3.3"
sympy = ">=1.10.1"
tensorforce = "0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
